--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "classnames": "^2.2.5",
         "copy-to-clipboard": "^3.0.8",
         "diabelb-react-scripts-ts": "^2.10.2",
+        "lodash": "^4.17.5",
         "node-sass-chokidar": "^0.0.3",
         "npm-run-all": "^4.1.2",
         "react": "^16.2.0",
