--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@types/redux-devtools": "^3.0.42",
         "antd": "^3.1.4",
         "axios": "^0.17.1",
+        "bizcharts": "^3.1.5",
         "classnames": "^2.2.5",
         "copy-to-clipboard": "^3.0.8",
         "diabelb-react-scripts-ts": "^2.10.2",
