feat: add heroku support

--- a/package.json
+++ b/package.json
@@ -1,60 +1,63 @@
 {
-    "name": "react-lab",
-    "version": "0.1.0",
-    "private": true,
-    "main": "index.js",
-    "dependencies": {
-        "@types/redux-devtools": "^3.0.42",
-        "antd": "^3.1.4",
-        "axios": "^0.17.1",
-        "bizcharts": "^3.1.5",
-        "classnames": "^2.2.5",
-        "copy-to-clipboard": "^3.0.8",
-        "diabelb-react-scripts-ts": "^2.10.2",
-        "lodash": "^4.17.5",
-        "node-sass-chokidar": "^0.0.3",
-        "npm-run-all": "^4.1.2",
-        "qs": "^6.5.1",
-        "react": "^16.2.0",
-        "react-dom": "^16.2.0",
-        "react-icons": "^2.2.7",
-        "react-redux": "^5.0.6",
-        "react-router-dom": "^4.2.2",
-        "react-router-redux": "^4.0.8",
-        "redux": "^3.7.2",
-        "redux-pack": "^0.1.5",
-        "redux-thunk": "^2.2.0",
-        "serve-static": "^1.13.2",
-        "style-loader": "^0.19.1"
-    },
-    "scripts": {
-        "build-css": "node-sass-chokidar src/ -o src/",
-        "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
-        "start-js": "react-scripts-ts start",
-        "start": "npm-run-all -p watch-css start-js",
-        "build-js": "react-scripts-ts build",
-        "build": "npm-run-all build-css build-js",
-        "test": "react-scripts-ts test --env=jsdom",
-        "eject": "react-scripts-ts eject",
-        "commitmsg": "validate-commit-msg",
-        "commit": "git-cz ",
-        "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
-    },
-    "devDependencies": {
-        "@types/jest": "^22.0.1",
-        "@types/node": "^9.3.0",
-        "@types/react": "^16.0.34",
-        "@types/react-dom": "^16.0.3",
-        "@types/react-router-dom": "^4.2.3",
-        "@types/redux": "^3.6.0",
-        "commitizen": "^2.3.0",
-        "conventional-changelog-cli": "^1.2.0",
-        "husky": "^0.13.1",
-        "json-server": "^0.12.1",
-        "mockjs": "^1.0.1-beta3",
-        "redux-devtools": "^3.4.1",
-        "tsconfig-paths-webpack-plugin": "^2.0.0",
-        "typings-for-css-modules-loader": "^1.7.0",
-        "validate-commit-msg": "^2.11.1"
-    }
+  "name": "react-lab",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@types/redux-devtools": "^3.0.42",
+    "antd": "^3.1.4",
+    "axios": "^0.17.1",
+    "bizcharts": "^3.1.5",
+    "classnames": "^2.2.5",
+    "copy-to-clipboard": "^3.0.8",
+    "diabelb-react-scripts-ts": "^2.10.2",
+    "lodash": "^4.17.5",
+    "node-sass-chokidar": "^0.0.3",
+    "npm-run-all": "^4.1.2",
+    "qs": "^6.5.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-icons": "^2.2.7",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.7.2",
+    "redux-pack": "^0.1.5",
+    "redux-thunk": "^2.2.0",
+    "serve-static": "^1.13.2",
+    "style-loader": "^0.19.1"
+  },
+  "scripts": {
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css":
+      "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts-ts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "build-js": "react-scripts-ts build",
+    "build": "npm-run-all build-css build-js",
+    "test": "react-scripts-ts test --env=jsdom",
+    "eject": "react-scripts-ts eject",
+    "commitmsg": "validate-commit-msg",
+    "commit": "git-cz ",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
+  },
+  "devDependencies": {
+    "@types/jest": "^22.0.1",
+    "@types/node": "^9.3.0",
+    "@types/react": "^16.0.34",
+    "@types/react-dom": "^16.0.3",
+    "@types/react-router-dom": "^4.2.3",
+    "@types/redux": "^3.6.0",
+    "commitizen": "^2.3.0",
+    "conventional-changelog-cli": "^1.2.0",
+    "husky": "^0.13.1",
+    "json-server": "^0.12.1",
+    "mockjs": "^1.0.1-beta3",
+    "redux-devtools": "^3.4.1",
+    "tsconfig-paths-webpack-plugin": "^2.0.0",
+    "typings-for-css-modules-loader": "^1.7.0",
+    "validate-commit-msg": "^2.11.1"
+  },
+  "engines": {
+    "node": "9.6.0"
+  }
 }
