--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts-ts build",
     "build": "npm-run-all build-css build-js",
+    "release-start": "node index.js && cd tests/ && node mock.js ",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
     "commitmsg": "validate-commit-msg",
