--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
+    "react-timeout": "^1.1.1",
     "redux": "^3.7.2",
     "redux-pack": "^0.1.5",
     "redux-thunk": "^2.2.0",
