--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "axios": "^0.17.1",
     "bizcharts": "^3.1.5",
     "classnames": "^2.2.5",
+    "compression": "^1.7.2",
+    "connect-history-api-fallback": "^1.5.0",
     "copy-to-clipboard": "^3.0.8",
     "diabelb-react-scripts-ts": "^2.10.2",
+    "express": "^4.16.3",
     "lodash": "^4.17.5",
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.1.2",
