--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "redux-pack": "^0.1.5",
     "redux-thunk": "^2.2.0",
     "serve-static": "^1.13.2",
+    "shortid": "^2.2.8",
     "style-loader": "^0.19.1"
   },
   "scripts": {
