--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "copy-to-clipboard": "^3.0.8",
     "diabelb-react-scripts-ts": "^2.10.2",
     "express": "^4.16.3",
+    "immer": "^1.3.0",
     "immutability-helper": "^2.7.0",
     "lodash": "^4.17.5",
     "node-sass-chokidar": "^0.0.3",
