--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "immer": "^1.3.0",
     "immutability-helper": "^2.7.0",
     "lodash": "^4.17.5",
+    "moment": "^2.22.1",
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.1.2",
     "qs": "^6.5.1",
